Login and generic Mailer in

--- a/public/server_config.ini
+++ b/public/server_config.ini
@@ -9,7 +9,8 @@ base_path = "https://coyote/"
 ; https://www.roadrunning.co.za/
 
 [database]
-db_location = "local";
+db_main = "local";
+db_log = "local_log_db";
 ; OPTIONS
 ; local, server
 
