Base login and session functionality in place
Will create a copy of the code to save for future use

--- a/public/server_config.ini
+++ b/public/server_config.ini
@@ -29,3 +29,15 @@ useragent = "RR_Mailer";
 
 [emailque]
 que_size = 10;
+
+[register]
+guid_valid = "1 day";
+
+[history]
+purge_period = "-6 hours";
+exclusion[] = "login/destroy"
+exclusion[] = "logout/confirm"
+exclusion[] = "login/userlogin/submit"
+;exclusion[] = "forgot-password"
+exclusion[] = "404"
+exclusion[] = "favicon.ico"
