Sitemap expanded to include regions

--- a/public/server_config.ini
+++ b/public/server_config.ini
@@ -40,3 +40,6 @@ exclusion[] = "login/userlogin/submit"
 ;exclusion[] = "forgot-password"
 exclusion[] = "404"
 exclusion[] = "favicon.ico"
+
+[session]
+static_values_expiry = "-5 seconds";
