Race lists for home page done
Featured Races
Updated Races
Most viewed - this is a new cron job that needs to run

--- a/public/server_config.ini
+++ b/public/server_config.ini
@@ -35,11 +35,27 @@ guid_valid = "1 day";
 [history]
 purge_period = "-6 hours";
 exclusion[] = "login/destroy"
-exclusion[] = "logout/confirm"
+exclusion[] = "mailer/*"
 exclusion[] = "login/userlogin/submit"
-;exclusion[] = "forgot-password"
-exclusion[] = "404"
+exclusion[] = "user/reset_password"
+exclusion[] = "user/confirm_email"
 exclusion[] = "favicon.ico"
 
 [session]
 static_values_expiry = "-5 seconds";
+
+
+
+[history]
+purge_period = "-6 hours";
+exclusion[] = "login/destroy"
+exclusion[] = "login/userlogin/submit"
+exclusion[] = "user/reset_password"
+exclusion[] = "user/confirm_email"
+exclusion[] = "mailer"
+exclusion[] = "mailer/process_que"
+exclusion[] = "mailer/test"
+exclusion[] = "favicon.ico"
+
+[session]
+static_values_expiry = "-5 hours";
