--- a/public/server_config.ini
+++ b/public/server_config.ini
@@ -34,8 +34,8 @@ guid_valid = "1 day";
 
 [history]
 purge_period = "-6 hours";
-exclusion[] = "login/destroy"
-exclusion[] = "mailer/*"
+exclusion[] = "mailer/*";
+exclusion[] = "login/destroy";
 exclusion[] = "login/userlogin/submit"
 exclusion[] = "user/reset_password"
 exclusion[] = "user/confirm_email"
@@ -43,19 +43,3 @@ exclusion[] = "favicon.ico"
 
 [session]
 static_values_expiry = "-5 seconds";
-
-
-
-[history]
-purge_period = "-6 hours";
-exclusion[] = "login/destroy"
-exclusion[] = "login/userlogin/submit"
-exclusion[] = "user/reset_password"
-exclusion[] = "user/confirm_email"
-exclusion[] = "mailer"
-exclusion[] = "mailer/process_que"
-exclusion[] = "mailer/test"
-exclusion[] = "favicon.ico"
-
-[session]
-static_values_expiry = "-5 hours";
