Email template and special char issue sorted

--- a/public/server_config.ini
+++ b/public/server_config.ini
@@ -17,7 +17,7 @@ db_main = "local";
 smtp_server = "smtp.gmail.com";
 smtp_port = "587";
 smtp_crypto = "ssl";
-email_charset = "iso-8859-1";
+email_charset = "UTF-8";
 from_address = "info@roadrunning.co.za";
 from_name = "Johan from RoadRunning.co.za";
 from_name_server = "RoadRunning.co.za";
