--- a/public/old/server_config_local_20200206.ini
+++ b/public/old/server_config_local_20200206.ini
@@ -1,26 +1,26 @@
 ; This is the config file to make the switch between localhost and live server painless
 
 [enviroment]
-server = "production"
+server = "development";
 ; OPTIONS
 ; development, testing, production
 
-base_path = "https://www.roadrunning.co.za/old"
-; OPTIONS
+base_path = "https://coyote/old"
+; XAMPP: http://localhost/roadrunning/public/
 ; http://192.168.33.10/
 ; http://www.roadrunning.co.za/
 
 [database]
-db_location = "server"
+db_location = "local";
 ; OPTIONS
 ; local, server
 
 [google]
-google_maps_url = "https://maps.googleapis.com/maps/api/js?key=AIzaSyD6v1yh3HTOju-2iQ1xyfoYcDqIoOw-078"
+google_maps_url = "https://maps.googleapis.com/maps/api/js"
 
 [email]
-smtp_server = "dandelion.aserv.co.za";
-smtp_port = "465";
+smtp_server = "smtp.gmail.com";
+smtp_port = "587";
 smtp_crypto = "ssl";
 email_charset = "iso-8859-1";
 from_address = "info@roadrunning.co.za";
@@ -32,16 +32,9 @@ bcc_address = "tech@roadrunning.co.za";
 useragent = "RR_Mailer";
 
 [emailque]
-que_size = 20;
+que_size = 10;
 
 [history]
 purge_period = "-6 hours";
-exclusion[] = "mailer/*";
-exclusion[] = "img/*";
-exclusion[] = "file/*";
-exclusion[] = "event/ics/*";
+exclusion[] = "mailer/process_que";
 exclusion[] = "favicon.ico";
-exclusion[] = "wp-login.php";
-exclusion[] = "apple-touch-icon.png";
-exclusion[] = "apple-touch-icon-120x120.png";
-exclusion[] = "apple-touch-icon-precomposed.png";
