Facebook login Take 1

--- a/public/composer.json
+++ b/public/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "google/apiclient": "2.0"
+        "google/apiclient": "2.0",
+        "facebook/graph-sdk": "~5.0",
+        "mpdf/mpdf": "^8.0"
     }
 }
