--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,31 +20,40 @@
 </IfModule>
 
 <IfModule mod_expires.c>
-  ExpiresActive On
+ExpiresActive On
+  # Fonts
   AddType application/vnd.ms-fontobject .eot 
   AddType application/x-font-ttf .ttf
   AddType application/x-font-opentype .otf
   AddType application/x-font-woff .woff
   AddType image/svg+xml .svg
-  ExpiresByType application/vnd.ms-fontobject "access 1 year"
-  ExpiresByType application/x-font-ttf "access 1 year"
-  ExpiresByType application/x-font-opentype "access 1 year"
-  ExpiresByType application/x-font-woff "access 1 year"
-  ExpiresByType image/svg+xml "access 1 year"
-  ExpiresByType text/html "access 1 hour"
-  ExpiresByType text/css "access 14 days"
-  ExpiresByType text/x-javascript "access 3 weeks"
-  ExpiresByType application/javascript "access 1 month"  
-  ExpiresByType application/x-javascript "access 1 month"
-  ExpiresByType image/gif "access 2 months"
-  ExpiresByType image/png "access 2 months"
-  ExpiresByType image/jpg "access 2 months"
-  ExpiresByType image/jpeg "access 2 months"
-  ExpiresByType image/gif "access 2 months"
-  ExpiresByType application/pdf "access 1 year"
-  ExpiresByType application/x-shockwave-flash "access 1 year"
-  ExpiresByType image/x-icon "access 1 year"
-  #ExpiresDefault "access 2 days"
+  ExpiresByType application/vnd.ms-fontobject "access plus 1 year"
+  ExpiresByType application/x-font-ttf "access plus 1 year"
+  ExpiresByType application/x-font-opentype "access plus 1 year"
+  ExpiresByType application/x-font-woff "access plus 1 year"
+  
+  # Images
+  ExpiresByType image/jpg "access plus 1 year"
+  ExpiresByType image/jpeg "access plus 1 year"
+  ExpiresByType image/gif "access plus 1 year"
+  ExpiresByType image/png "access plus 1 year"
+  ExpiresByType image/webp "access plus 1 year"
+  ExpiresByType image/svg+xml "access plus 1 year"
+  ExpiresByType image/x-icon "access plus 1 year"
+
+  # Video
+  ExpiresByType video/mp4 "access plus 1 year"
+  ExpiresByType video/mpeg "access plus 1 year"
+
+  # CSS, JavaScript
+  ExpiresByType text/css "access plus 1 month"
+  ExpiresByType text/javascript "access plus 1 month"
+  ExpiresByType application/javascript "access plus 1 month"
+  ExpiresByType application/x-javascript "access plus 1 month"
+
+  # Others
+  ExpiresByType application/pdf "access plus 1 month"
+  ExpiresByType application/x-shockwave-flash "access plus 1 month"
 </IfModule>
 
 <IfModule mod_deflate.c>
@@ -77,3 +86,44 @@
   BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
   Header append Vary User-Agent
 </IfModule>
+
+# php -- BEGIN cPanel-generated handler, do not edit
+# Set the “ea-php73” package as the default “PHP” programming language.
+<IfModule mime_module>
+  AddHandler application/x-httpd-ea-php73 .php .php7 .phtml
+</IfModule>
+# php -- END cPanel-generated handler, do not edit
+
+# BEGIN cPanel-generated php ini directives, do not edit
+# Manual editing of this file may result in unexpected behavior.
+# To make changes to this file, use the cPanel MultiPHP INI Editor (Home >> Software >> MultiPHP INI Editor)
+# For more information, read our documentation (https://go.cpanel.net/EA4ModifyINI)
+<IfModule php7_module>
+   php_flag display_errors Off
+   php_value max_execution_time 90
+   php_value max_input_time 60
+   php_value max_input_vars 1000
+   php_value memory_limit 128M
+   php_value post_max_size 20M
+   php_value session.save_path "/tmp"
+   php_value upload_max_filesize 20M
+   php_flag zlib.output_compression Off
+   php_value session.gc_probability 1
+   php_value session.gc_divisor 1000
+   php_value session.gc_maxlifetime 1440
+</IfModule>
+<IfModule lsapi_module>
+   php_flag display_errors Off
+   php_value max_execution_time 90
+   php_value max_input_time 60
+   php_value max_input_vars 1000
+   php_value memory_limit 128M
+   php_value post_max_size 20M
+   php_value session.save_path "/tmp"
+   php_value upload_max_filesize 20M
+   php_flag zlib.output_compression Off
+   php_value session.gc_probability 1
+   php_value session.gc_divisor 1000
+   php_value session.gc_maxlifetime 1440
+</IfModule>
+# END cPanel-generated php ini directives, do not edit
