--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,8 +6,10 @@
     RewriteEngine On
 
     # Redirect Trailing Slashes If Not A Folder...
+    RewriteCond %{REQUEST_URI} /(.+)/$
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)/$ /$1 [L,R=301]
+    RewriteRule ^ index.php [L]
+   # RewriteRule ^(.*)/$ /$1 [L,R=301]
 
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
