Training Programs links updated

--- a/public/server_config.ini
+++ b/public/server_config.ini
@@ -33,7 +33,7 @@ que_size = 10;
 guid_valid = "1 day";
 
 [history]
-purge_period = "-6 hours";
+purge_period = "-18 hours";
 exclusion[] = "mailer/*";
 exclusion[] = "login/destroy";
 exclusion[] = "login/userlogin/submit"
@@ -42,4 +42,4 @@ exclusion[] = "user/confirm_email"
 exclusion[] = "favicon.ico"
 
 [session]
-static_values_expiry = "-60 seconds";
+static_values_expiry = "-60 minutes";
