--- a/public/server_config_20210712.ini
+++ b/public/server_config_20210712.ini
@@ -1,15 +1,15 @@
 ; This is the config file to make the switch between localhost and live server painless
 
 [enviroment]
-server = "development";
+server = "production";
 ; OPTIONS
 ; development, testing, production
 
-base_path = "https://coyote/"
+base_path = "https://www.roadrunning.co.za"
 ; https://www.roadrunning.co.za/
 
 [database]
-db_main = "local";
+db_main = "server";
 ; OPTIONS
 ; local, server
 
@@ -33,13 +33,16 @@ que_size = 10;
 guid_valid = "1 day";
 
 [history]
-purge_period = "-6 hours";
+purge_period = "-18 hours";
 exclusion[] = "mailer/*";
 exclusion[] = "login/destroy";
 exclusion[] = "login/userlogin/submit"
 exclusion[] = "user/reset_password"
 exclusion[] = "user/confirm_email"
 exclusion[] = "favicon.ico"
+exclusion[] = "cron/*"
+exclusion[] = "cron/intra_day"
+exclusion[] = "cron/daily"
 
 [session]
-static_values_expiry = "-60 seconds";
+static_values_expiry = "-60 minutes";
