history summary re-write

--- a/public/server_config_server.ini
+++ b/public/server_config_server.ini
@@ -35,6 +35,11 @@ guid_valid = "1 day";
 [history]
 purge_period = "-6 hours";
 exclusion[] = "mailer/*";
+exclusion[] = "file/*";
+exclusion[] = "img/*";
+exclusion[] = "cron/*";
+exclusion[] = "history/*";
+exclusion[] = "event/ics/*";
 exclusion[] = "login/destroy";
 exclusion[] = "login/userlogin/submit"
 exclusion[] = "user/reset_password"
