--- a/public/server_config.ini
+++ b/public/server_config.ini
@@ -33,13 +33,20 @@ que_size = 10;
 guid_valid = "1 day";
 
 [history]
-purge_period = "-18 hours";
+purge_period = "-6 hours";
 exclusion[] = "mailer/*";
+exclusion[] = "file/*";
+exclusion[] = "img/*";
+exclusion[] = "history/*";
+exclusion[] = "event/ics/*";
 exclusion[] = "login/destroy";
 exclusion[] = "login/userlogin/submit"
 exclusion[] = "user/reset_password"
 exclusion[] = "user/confirm_email"
 exclusion[] = "favicon.ico"
+exclusion[] = "cron/*"
+exclusion[] = "cron/intra_day"
+exclusion[] = "cron/daily"
 
 [session]
 static_values_expiry = "-60 minutes";
