--- a/public/server_config_prod_XNEELO.ini
+++ b/public/server_config_prod_XNEELO.ini
@@ -27,7 +27,7 @@ bcc_address = "tech@roadrunning.co.za";
 useragent = "RR_Mailer";
 
 [emailque]
-que_size = 10;
+que_size = 20;
 
 [register]
 guid_valid = "1 day";
@@ -35,6 +35,10 @@ guid_valid = "1 day";
 [history]
 purge_period = "-6 hours";
 exclusion[] = "mailer/*";
+exclusion[] = "file/*";
+exclusion[] = "img/*";
+exclusion[] = "history/*";
+exclusion[] = "event/ics/*";
 exclusion[] = "login/destroy";
 exclusion[] = "login/userlogin/submit"
 exclusion[] = "user/reset_password"
