Email SMTP server change

--- a/public/server_config.ini
+++ b/public/server_config.ini
@@ -25,6 +25,8 @@ from_address_server = "info@roadrunning.co.za";
 from_name_server = "RoadRunning.co.za";
 bcc_address = "tech@roadrunning.co.za";
 useragent = "RR_Mailer";
+smtp_user="";
+smtp_pass="";
 
 [emailque]
 que_size = 10;
