--- a/public/server_config_prod_XNEELO.ini
+++ b/public/server_config_prod_XNEELO.ini
@@ -14,7 +14,7 @@ db_main = "server";
 ; local, server
 
 [email]
-smtp_server = "smtp.gmail.com";
+smtp_server = "smtp.roadrunning.co.za";
 smtp_port = "587";
 smtp_crypto = "ssl";
 email_charset = "UTF-8";
@@ -25,6 +25,8 @@ from_address_server = "info@roadrunning.co.za";
 from_name_server = "RoadRunning.co.za";
 bcc_address = "tech@roadrunning.co.za";
 useragent = "RR_Mailer";
+smtp_user="tech@roadrunning.co.za";
+smtp_pass="eP20D^AtmmG@a8m5";
 
 [emailque]
 que_size = 20;
