--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,43 +19,49 @@
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    
+    #stop image hotlinking
+    RewriteCond %{HTTP_REFERER} !^$
+    RewriteCond %{HTTP_REFERER} !^http(s)?://(www.)?roadrunning.co.za [NC]
+    RewriteRule .(jpg|jpeg|png|gif|webp)$ – [NC,F,L]
 </IfModule>
+
+<ifModule mod_headers.c>
+    Header set Connection keep-alive
+</ifModule>
 
 <IfModule mod_expires.c>
 ExpiresActive On
+ExpiresDefault "access plus 1 month"
+  # Remy introducing HTML5 at Introducing HTML5 suggested caching.appcache needs re-requests in FF 3.6.
+  ExpiresByType text/cache-manifest "access plus 0 seconds"
+  # Your document HTML
+  ExpiresByType text/html "access plus 0 seconds"
+  # Data
+  ExpiresByType text/xml "access plus 0 seconds"
+  ExpiresByType application/xml "access plus 0 seconds"
+  ExpiresByType application/json "access plus 0 seconds"
+  # Favicon (cannot be renamed)
+  ExpiresByType image/x-icon "access plus 1 week"
   # Fonts
-  AddType application/vnd.ms-fontobject .eot 
-  AddType application/x-font-ttf .ttf
-  AddType application/x-font-opentype .otf
-  AddType application/x-font-woff .woff
-  AddType image/svg+xml .svg
-  ExpiresByType application/vnd.ms-fontobject "access plus 1 year"
-  ExpiresByType application/x-font-ttf "access plus 1 year"
-  ExpiresByType application/x-font-opentype "access plus 1 year"
-  ExpiresByType application/x-font-woff "access plus 1 year"
-  
-  # Images
-  ExpiresByType image/jpg "access plus 1 year"
-  ExpiresByType image/jpeg "access plus 1 year"
-  ExpiresByType image/gif "access plus 1 year"
-  ExpiresByType image/png "access plus 1 year"
-  ExpiresByType image/webp "access plus 1 year"
-  ExpiresByType image/svg+xml "access plus 1 year"
-  ExpiresByType image/x-icon "access plus 1 year"
-
-  # Video
-  ExpiresByType video/mp4 "access plus 1 year"
-  ExpiresByType video/mpeg "access plus 1 year"
-
-  # CSS, JavaScript
-  ExpiresByType text/css "access plus 1 month"
-  ExpiresByType text/javascript "access plus 1 month"
-  ExpiresByType application/javascript "access plus 1 month"
-  ExpiresByType application/x-javascript "access plus 1 month"
-
-  # Others
-  ExpiresByType application/pdf "access plus 1 month"
-  ExpiresByType application/x-shockwave-flash "access plus 1 month"
+  ExpiresByType font/ttf "access plus 4 months"
+  ExpiresByType font/otf "access plus 4 months"
+  ExpiresByType font/woff "access plus 4 months"
+  ExpiresByType font/woff2 "access plus 4 months"
+  ExpiresByType image/svg+xml "access plus 1 month"
+  ExpiresByType application/vnd.ms-fontobject "access plus 1 month"  
+  # Media: images, video, audio
+  ExpiresByType image/gif "access plus 4 months"
+  ExpiresByType image/png "access plus 4 months"
+  ExpiresByType image/jpeg "access plus 4 months"
+  ExpiresByType image/webp "access plus 4 months"
+  ExpiresByType video/ogg "access plus 4 months"
+  ExpiresByType audio/ogg "access plus 4 months"
+  ExpiresByType video/mp4 "access plus 4 months"
+  ExpiresByType video/webm "access plus 4 months"
+  # CSS and JavaScript
+  ExpiresByType text/css "access plus 1 week"
+  ExpiresByType application/javascript "access plus 1 week"
 </IfModule>
 
 <IfModule mod_deflate.c>
